--- a/style.css
+++ b/style.css
@@ -1,15 +1,73 @@
-.sun-icon {
-  color: yellow;
+body {
+  font-family: Arial, Helvetica, sans-serif;
 }
-.moon-icon {
-  color: aquamarine;
+h1 {
+  color: rgb(32, 30, 30);
+  font-size: 34px;
+  line-height: 28px;
+  margin-bottom: 0;
 }
-.drops-icon {
-  color: blue;
+ul {
+  margin: 10px;
+  padding: 10px;
 }
-.wind-icon {
-  color: blueviolet;
+li {
+  list-style: none;
+
+  margin: 0;
+  padding: 0;
+  color: #12422e;
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
 }
-.cloud-icon {
-  color: blue;
+li:first-letter {
+  text-transform: capitalize;
+}
+.weather-app-wrapper {
+  max-width: 800px;
+  margin: 30, auto;
+}
+.weather-app {
+  padding: 20px;
+  border: 1px, solid #12422e;
+  border-radius: 5px;
+}
+.overview:first-letter {
+  text-transform: capitalize;
+}
+.sun:first-letter {
+  text-transform: capitalize;
+}
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+  vertical-align: top;
+}
+.weather-temperature strong {
+  color: #12422e;
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 1;
+}
+.weather-temperature .units {
+  position: relative;
+  font-size: 20px;
+  top: -34px;
+}
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #000;
+}
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.8;
+}
+.min-temp {
+  opacity: 0.6;
+}
+.wearhet-forecast-temperatures {
+  font-size: 13px;
 }
